# crm

./: Cargo.toml
crm/: Cargo.toml  build.rs
crm/src/: client.rs  lib.rs  main.rs  server.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs  mod.rs
prost-builder-trait/: Cargo.toml
prost-builder-trait/src/: prost.rs  tonic.rs
protos/crm/: crm.proto
protos/user-stats/: messages.proto  rpc.proto
user-stats/: Cargo.toml  build.rs  notify.yml
user-stats/src/: config.rs  lib.rs  main.rs
user-stats/src/pb/: mod.rs  user_stats.rs
