[package]
edition = "2024"
name = "crm"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
