[package]
edition = "2024"
keywords = ["build", "prost", "tonic"]
name = "prost-builder-trait"
version = "0.1.0"

[features]
default = ["prost", "tonic"]
prost = ["prost-build"]
tonic = ["tonic-prost-build"]

[dependencies]
prost-build = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }
