[package]
edition = "2024"
name = "user-stats"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
derive_builder = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-builder-trait = { path = "../prost-builder-trait", features = ["tonic"] }
prost-serde = { workspace = true }
tonic-prost-build = { workspace = true }
